:sparkles: redirect to notion page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en-US">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="refresh" content="0; url=https://www.notion.so/maggie21/Yogeshvar-b9594c840a5c430294c4ca03f38200f8">
+        <script type="text/javascript">
+            window.location.href="https://www.notion.so/maggie21/Yogeshvar-b9594c840a5c430294c4ca03f38200f8"
+        </script>
+        <title>Yogeshvar's Resume</title>
+    </head>
+</html>
