--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
         <script type="text/javascript">
             window.location.href="https://www.notion.so/maggie21/Yogeshvar-b9594c840a5c430294c4ca03f38200f8"
         </script>
+        <script>
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+            ga('create', 'G-D27N9E4HZK', 'auto');
+            ga('send', 'pageview');
+        </script>
         <title>Yogeshvar's Resume</title>
     </head>
 </html>
