--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="0; url=https://www.notion.so/maggieyoggie21/Yogeshvar-ca59ba07676d46adb33a438d77efb79d">
+        <meta http-equiv="refresh" content="0; url=https://maggieyoggie21.notion.site/Yogeshvar-ca59ba07676d46adb33a438d77efb79d">
         <script type="text/javascript">
-            window.location.href="https://www.notion.so/maggieyoggie21/Yogeshvar-ca59ba07676d46adb33a438d77efb79d"
+            window.location.href="https://maggieyoggie21.notion.site/Yogeshvar-ca59ba07676d46adb33a438d77efb79d"
         </script>
         <script>
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
