--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
         <script type="text/javascript">
             window.location.href="https://maggieyoggie21.notion.site/Yogeshvar-ca59ba07676d46adb33a438d77efb79d"
         </script>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-M9SN2DBMLL"></script>
         <script>
-            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-            })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
 
-            ga('create', 'G-D27N9E4HZK', 'auto');
-            ga('send', 'pageview');
+          gtag('config', 'G-M9SN2DBMLL');
         </script>
         <title>Yogeshvar's Resume</title>
     </head>
