--- a/index.html
+++ b/index.html
@@ -2,18 +2,29 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="0; url=https://maggieyoggie21.notion.site/Yogeshvar-ca59ba07676d46adb33a438d77efb79d">
+        
         <script type="text/javascript">
-            window.location.href="https://maggieyoggie21.notion.site/Yogeshvar-ca59ba07676d46adb33a438d77efb79d"
+            setTimeout(redirect, 2000);
+            var redirected = false;
+            function redirect() {
+                if (!redirected) {
+                    redirected = true;
+                    location.href = "https://maggieyoggie21.notion.site/Yogeshvar-ca59ba07676d46adb33a438d77efb79d"
+                }
+            }
         </script>
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-M9SN2DBMLL"></script>
         <script>
+            
           window.dataLayer = window.dataLayer || [];
           function gtag(){dataLayer.push(arguments);}
           gtag('js', new Date());
 
           gtag('config', 'G-M9SN2DBMLL');
+            ga('send', 'event', 'Event Name', 'redirect', {
+                hitCallback: redirect
+            });
         </script>
         <title>Yogeshvar's Resume</title>
     </head>
