--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             function redirect() {
                 if (!redirected) {
                     redirected = true;
-                    location.href = "https://maggieyoggie21.notion.site/Yogeshvar-ca59ba07676d46adb33a438d77efb79d"
+                    location.href = "https://yogeshvar.super.site"
                 }
             }
         </script>
