Add About page and blog styles, update index with navigation and newsletter dialog

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Notes</title>
+  <title>Yogeshvar</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,400;0,500;1,400&family=Literata:ital,opsz,wght@0,7..72,400;0,7..72,500;1,7..72,400&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="blog.css">
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
   <script src="script.js" defer></script>
 </head>
@@ -32,6 +33,11 @@
 
   <div class="content">
     <header>
+      <nav class="site-nav">
+        <a href="index.html" class="active">Blog</a>
+        <a href="about.html">About</a>
+        <button onclick="showNewsletterDialog()" class="subscribe-btn">Subscribe</button>
+      </nav>
       <h1 class="site-title">notes on software & life</h1>
     </header>
 
@@ -93,14 +99,6 @@
     <section class="blog-list">
       <div class="section-header">
         <h2 class="section-title">All Posts</h2>
-        <div class="view-controls">
-          <button class="view-control active" onclick="toggleView('grid')" aria-label="Grid view">
-            <span class="view-icon">⊞</span>
-          </button>
-          <button class="view-control" onclick="toggleView('list')" aria-label="List view">
-            <span class="view-icon">☰</span>
-          </button>
-        </div>
       </div>
 
       <div class="tabs">
@@ -109,18 +107,46 @@
         <button class="tab" onclick="filterPosts('blogs')">Notes ✍️</button>
       </div>
       
-      <div class="blog-grid" data-view="grid" id="posts-container">
+      <div class="blog-grid" id="posts-container">
         <!-- Posts will be dynamically loaded here -->
       </div>
     </section>
 
-    <div class="newsletter">
-      <p>Get notified when I publish new posts:</p>
-      <form>
-        <input type="email" placeholder="your@email.com" required>
-        <button type="submit">Subscribe</button>
+    <dialog id="newsletter-dialog" class="newsletter-dialog">
+      <form method="post" action="https://fiery-cricket.pikapod.net/subscription/form" class="listmonk-form">
+        <div>
+          <div class="dialog-header">
+            <h3>Subscribe</h3>
+            <button type="button" class="close-btn" onclick="closeNewsletterDialog()">&times;</button>
+          </div>
+          <input type="hidden" name="nonce" />
+
+          <p><input type="email" name="email" required placeholder="E-mail" /></p>
+          <p><input type="text" name="name" placeholder="Name (optional)" /></p>
+
+          <p>
+            <input id="9a4eb" type="checkbox" name="l" checked value="9a4eb75f-a3a0-49fb-b158-d2064a277ada" />
+            <label for="9a4eb">All Posts</label>
+            <br />
+            <span>All blog posts including ScholarSynth (AI Paper blogger)</span>
+          </p>
+          <p>
+            <input id="2d4a1" type="checkbox" name="l" checked value="2d4a1c8f-d938-4a0c-a854-e2acaed64736" />
+            <label for="2d4a1">I'm not a robot</label>
+            <br />
+            <span>Not an AI content</span>
+          </p>
+          <p>
+            <input id="fe755" type="checkbox" name="l" checked value="fe755cb3-06c6-4dba-befb-e7c8dbf23b4e" />
+            <label for="fe755">I am robot</label>
+            <br />
+            <span>ScholarSynth AI Blogger</span>
+          </p>
+
+          <input type="submit" value="Subscribe" />
+        </div>
       </form>
-    </div>
+    </dialog>
   </div>
 </body>
 
